--- a/pages/mall/subpages/goods/subpages/search/index.wxml
+++ b/pages/mall/subpages/goods/subpages/search/index.wxml
@@ -17,14 +17,14 @@
   </view>
 
   <van-dropdown-menu wx:if="{{isSearching}}" active-color="#1989fa">
-    <van-dropdown-item value="{{ curSortIndex }}" options="{{ sortOptions }}" />
-    <van-dropdown-item value="{{ curCategoryId }}" options="{{ categoryOptions }}" />
+    <van-dropdown-item value="{{ curSortIndex }}" options="{{ sortOptions }}" bind:change="setSortIndex" />
+    <van-dropdown-item value="{{ curCategoryId }}" options="{{ categoryOptions }}" bind:change="setCategoryId" />
   </van-dropdown-menu>
 </view>
 
 <view class="history-keywords-wrap" wx:if="{{!isSearching}}" style="padding-top: {{statusBarHeight + 65}}px">
   <view class="title row between" wx:if="{{historyKeywordsList.length}}">
-    <view>搜索记录</view>
+    <view>历史搜索</view>
     <image class="delete-icon" src="https://img.ubo.vip/mp/selection/search/del-history.png" bindtap="clearHistoryKeywords" />
   </view>
   <view class="keywords-list">
@@ -40,6 +40,6 @@
 
 <view class="goods-list-wrap" wx:if="{{isSearching}}" style="padding-top: {{statusBarHeight + 104}}px">
   <fall-flow wx:if="{{goodsList}}" list="{{goodsList}}" generic:item="goods-item" />
-  <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无商品列表" />
+  <empty-illus wx:if="{{finished && !goodsList.length}}" desc="没有找到相关商品" />
   <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～没有更多了～</view>
 </view>
