--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -34,15 +34,25 @@
         <view class="function-desc">我的订单</view>
       </view>
       <view class="function-item">
-        <image class="function-icon" src="./images/collection.png" />
+        <image class="function-icon" src="./images/address.png" />
+        <view class="function-desc">我的地址</view>
+      </view>
+      <view class="function-item">
+        <image class="function-icon" src="./images/collect.png" />
         <view class="function-desc">我的收藏</view>
       </view>
       <view class="function-item">
         <image class="function-icon" src="./images/track.png" />
         <view class="function-desc">我的足迹</view>
       </view>
-      <view class="function-item"></view>
-      <view class="function-item"></view>
+      <view class="function-item">
+        <image class="function-icon" src="./images/wallet.png" />
+        <view class="function-desc">我的钱包</view>
+      </view>
+      <view class="function-item">
+        <image class="function-icon" src="./images/shop.png" />
+        <view class="function-desc">我的店铺</view>
+      </view>
     </view>
 
     <view class="works-wrap {{menuFixed ? 'fixed' : '' }}">
