--- a/pages/mine/suppages/address-list/index.wxss
+++ b/pages/mine/suppages/address-list/index.wxss
@@ -1,40 +1,33 @@
-.container {
+.address-list {
   margin: 24rpx 24rpx calc(204rpx + env(safe-area-inset-bottom));
   border-radius: 24rpx;
   background: #fff;
 }
 
-.address-list-wrap {
-  padding-bottom: 200rpx;
-}
-.address-list-inner {
+.address {
   display: flex;
   align-items: center;
   height: 150rpx;
   padding: 0 24rpx;
   width: 100%;
 }
-.address-content {
+.content {
   flex: 1;
   color: #999;
   font-size: 26rpx;
 }
-.user-info {
-  display: flex;
-  align-items: center;
-  color: #333;
-  font-size: 28rpx;
-}
 .user-name {
   margin-right: 20rpx; 
+  color: #333;
+  font-size: 28rpx;
 }
 .default-icon {
   margin-left: 36rpx;
   padding: 2rpx 6rpx;
+  color: #1986F8;
   font-size: 20rpx;
-  color: #B87900;
   border-radius: 8rpx;
-  border: 2rpx solid #000;
+  border: 2rpx solid #1986F8;
 }
 .address-detail {
   margin-top: 16rpx;
