--- a/pages/mine/suppages/address-list/index.wxss
+++ b/pages/mine/suppages/address-list/index.wxss
@@ -1,17 +1,17 @@
 .address-list {
-  margin: 24rpx 24rpx calc(24rpx + env(safe-area-inset-bottom));
-  border-radius: 24rpx;
-  background: #fff;
+  padding: 24rpx 24rpx calc(24rpx + env(safe-area-inset-bottom));
 }
-
 .address {
-  display: flex;
-  align-items: center;
-  height: 150rpx;
-  padding: 0 24rpx;
-  width: 100%;
+  margin-bottom: 24rpx;
+  background: #fff;
+  border-radius: 24rpx;
+  overflow: hidden;
+}
+.inner {
+  padding: 24rpx;
 }
 .content {
+  margin: 0 24rpx;
   flex: 1;
   color: #999;
   font-size: 26rpx;
@@ -19,18 +19,21 @@
 .user-name {
   margin-right: 20rpx; 
   color: #333;
-  font-size: 28rpx;
+  font-size: 30rpx;
+  font-weight: bold;
 }
 .default-icon {
   margin-left: 36rpx;
   padding: 2rpx 6rpx;
-  color: #1986F8;
+  color: #161F4E;
   font-size: 20rpx;
   border-radius: 8rpx;
-  border: 2rpx solid #1986F8;
+  border: 2rpx solid #161F4E;
 }
 .address-detail {
   margin-top: 16rpx;
+  color: #333;
+  font-size: 26rpx;
 }
 
 .swipe-cell-delete-btn {
