--- a/pages/mine/suppages/address-list/subpages/add/index.wxml
+++ b/pages/mine/suppages/address-list/subpages/add/index.wxml
@@ -1,26 +1,32 @@
 <view class="card">
   <view class="info-list row">
     <label class="title">收货人: </label>
-    <input class="content" name="consignee" maxlength="8" value="{{consignee}}" placeholder="收货人姓名"  placeholder-style="color: #999;"/>
+    <input class="content" bindinput="setName" placeholder="收货人姓名" placeholder-style="color: #999;"/>
   </view>
   <view class="info-list row">
     <label class="title">手机号: </label>
-    <input class="content" name="mobile" type="number" value="{{mobile}}" placeholder="请输入手机号" placeholder-style="color: #999;"/>
+    <input class="content" bindinput="setMobile" type="number" placeholder="请输入手机号" placeholder-style="color: #999;"/>
   </view>
-  <view class="info-list row" bindtap="showRegionPicker">
-    <label class="title">市 / 区: </label>
-    <text class="content {{regionArr.length ? '' : 'placeholder'}}">{{regionArr.length ? (regionArr[0] + ' ' + regionArr[1] + ' ' + regionArr[2]) : '请选择地区' }}</text>
+  <view class="info-list row">
+    <label class="title">地区: </label>
+    <picker 
+      class="content {{regionDesc ? '' : 'placeholder'}}" 
+      bindchange="selectRegion" 
+      mode="region"
+    >
+      {{regionDesc || '请选择地区'}}
+    </picker>
   </view>
   <view class="info-list row">
     <label class="title">详细地址: </label>
-    <input class="content" name="address_detail" value="{{addressDetail}}" placeholder='如街道，楼层、门牌号' placeholder-style="color: #999;"/>
+    <input class="content" bindinput="setAddressDetail" placeholder='如街道，楼层、门牌号' placeholder-style="color: #999;"/>
   </view>
 </view>
 
 <view class="card">
   <view class="info-list row between">
     <label class="title">设为默认: </label>
-    <switch style="transform: scale(0.8)" bindchange="switchChange" color="#F7CC9C" checked="{{isDefault}}" />
+    <switch style="transform: scale(0.8)" bindchange="toggleDefaultValue" color="#1986F8" />
   </view>
 </view>
 
