--- a/pages/mine/suppages/address-list/subpages/edit/index.wxss
+++ b/pages/mine/suppages/address-list/subpages/edit/index.wxss
@@ -1,50 +1,49 @@
+.card {
+  margin: 24rpx;
+  padding: 0 24rpx;
+  background: #fff;
+  border-radius: 24rpx;
+}
 .info-list {
   width: 100%;
-  height: 90rpx;
-  display: flex;
-  align-items: center;
+  height: 100rpx;
+  color: #333;
+  font-size: 28rpx;
   border-bottom: 1rpx solid #e5e5e5;
 }
 .info-list:last-child {
   border: none;
 }
+.title {
+  width: 160rpx;
+}
 .content {
-  margin-left: 20rpx;
   flex: 1;
-  font-size: 30rpx;
   color: #333;
 }
 .content.placeholder {
   color: #999;
 }
 
-.address-default {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 20rpx;
-  padding-left: 20rpx;
-  height: 100rpx;
-  background: #fff;
-  border-radius: 16rpx;
-  box-sizing: border-box;
+.btns-wrap {
+  position: fixed;
+  left: 0;
+  bottom: calc(24rpx + env(safe-area-inset-bottom));
+  width: 100%;
+  padding: 0 24rpx;
 }
 .delete-btn, .save-btn {
   flex: 1;
-  margin: 20rpx;
   height: 80rpx;
-  line-height: 80rpx;
-  text-align: center;
+  color: #fff;
+  font-size: 28rpx;
   border-radius: 40rpx;
-  font-size: 34rpx;
-  font-weight: bold;
-  box-sizing: border-box;
 }
 .delete-btn {
-  background-color: #F7CC9C;
-  color: #000;
+  margin-right: 12rpx;
+  background: #FD0B0A;
 }
 .save-btn {
-  background-color: #000;
-  color: #F7CC9C;
+  margin-left: 12rpx;
+  background: #161F4E;
 }
