--- a/pages/mall/subpages/goods/subpages/order-check/index.wxml
+++ b/pages/mall/subpages/goods/subpages/order-check/index.wxml
@@ -1,57 +1,70 @@
-<view class="content-wrap">
-  <view class="list-wrap list" bindtap="chooseAddress">
-    <image style="width: 42rpx; height: 42rpx;" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/address-icon.png" />
+<view class="container">
+  <view class="card row" bindtap="chooseAddress">
+    <image class="address-icon" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/address-icon.png" />
     <view class="consignee">
       <view class="person-info" wx:if="{{preOrderInfo.addressInfo}}">
-        <text style="margin-right: 20rpx;">{{preOrderInfo.addressInfo.name}}</text>
+        <text class="consignee-name">{{preOrderInfo.addressInfo.name}}</text>
         <text>{{preOrderInfo.addressInfo.mobile}}</text>
       </view>
       <view class="address-info" wx:if="{{preOrderInfo.addressInfo}}">{{preOrderInfo.addressInfo.regionDesc + ' ' + preOrderInfo.addressInfo.addressDetail}}</view>
       <view wx:if="{{!preOrderInfo.addressInfo}}">请选择合适的寄件地址</view>
     </view>
-    <image style="width:32rpx;height:32rpx;" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/to-icon.png" />
+    <image class="select-icon" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/to-icon.png" />
   </view>
 
   <view 
-    class="list-wrap" style="padding-bottom: 10rpx;" 
+    class="card"
     wx:for="{{preOrderInfo.goodsLists}}" wx:key="index"
   >
-    <view class="order-header">
+    <view class="order-header row">
       <image class="shop-icon" wx:if="{{item.shopInfo}}" src="{{item.shopInfo.avatar}}" />
       <view>{{item.shopInfo ? item.shopInfo.name : '官方自营'}}</view>
     </view>
-    <view class="goods-list" wx:for="{{item.goodsList}}" wx:key="index" wx:for-item="goods">
-      <view style="display: flex">
-        <view>
-          <image class="goods-cover" src="{{goods.goodsImage}}" mode="aspectFill" />
-        </view>
-        <view class="goods-info">
-          <view>{{goods.goodsName}}</view>
-          <view class="goods-price-wrap">
-            <price-unit price="{{goods.price}}" />
-            <view class="count-wrap">
-              <text>x</text>
-              <text class="count">{{goods.number}}</text>
-            </view>
+    <view class="goods-list row" wx:for="{{item.goodsList}}" wx:key="index" wx:for-item="goods">
+      <image class="goods-img" src="{{goods.goodsImage}}" mode="aspectFill" lazy-load />
+      <view class="goods-content">
+        <view class="goods-name omit">{{goods.goodsName}}</view>
+        <view class="goods-sku omit single-line" wx:if="{{goods.selectedSkuName}}">规格：{{goods.selectedSkuName}}</view>
+        <view class="goods-price-wrap">
+          <price-unit price="{{goods.price || 0}}" />
+          <view class="count-wrap">
+            <text>x</text>
+            <text class="count">{{goods.number}}</text>
           </view>
         </view>
       </view>
     </view>
-    <view class="account-item" style="padding-top: 16rpx;"  wx:if="{{preOrderInfo.freightPrice}}">
-      <text>运费</text>
-      <text class="account-amount">¥{{preOrderInfo.freightPrice}}</text>
+  </view>
+
+  <view class="card">
+    <view class="card-title">价格明细</view>
+    <view class="list row between">
+      <view class="list-title">
+        <text>商品总价</text>
+        <text class="list-tips"> 共2件宝贝</text>
+      </view>
+      <price-unit price="{{preOrderInfo.totalPrice || 0}}" color="#333" />
     </view>
-    <view class="account-item">
-      <text>合计</text>
-      <text class="account-amount">¥{{preOrderInfo.totalPrice}}</text>
+    <view class="list row between">
+      <view class="list-title">
+        <text>运费</text>
+      </view>
+      <price-unit price="{{preOrderInfo.freightPrice || 0}}" color="#333" />
+    </view>
+    <view class="list row between">
+      <view class="list-title">
+        <text>合计</text>
+      </view>
+      <price-unit price="{{preOrderInfo.totalPrice || 0}}" color="#333" />
     </view>
   </view>
 </view>
 
-<view class="bottom-bar">
-  <view class="total-price-wrap">
-    <text>您需要支付：</text>
-    <price-unit price="{{preOrderInfo.totalPrice}}" fontSize="26rpx" integerPartFontSize="36rpx" />
+<view class="bottom-bar row">
+  <view class="total-price-wrap row baseline">
+    <text class="count-desc">共2件</text>
+    <text>合计：</text>
+    <price-unit price="{{preOrderInfo.totalPrice}}" fontSize="28rpx" integerPartFontSize="42rpx" />
   </view>
-  <view class="submit" bindtap="submit">提交订单</view>
+  <button class="submit-btn {{preOrderInfo.addressInfo ? 'active' : ''}}" bindtap="submit">提交订单</button>
 </view>
