--- a/pages/mall/subpages/goods/subpages/order-check/index.wxss
+++ b/pages/mall/subpages/goods/subpages/order-check/index.wxss
@@ -1,55 +1,24 @@
-.content-wrap {
+.container {
   padding-bottom: calc(60px + env(safe-area-inset-bottom));
 }
 
-.list-wrap {
-  margin: 20rpx;
-  padding: 30rpx;
+.card {
+  margin: 24rpx;
+  padding: 24rpx;
   background-color: #fff;
   border-radius: 16rpx;
 }
-.list-wrap.list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.list-title {
-  font-size: 28rpx;
+.card-title {
   color: #333;
+  font-size: 30rpx;
   font-weight: 500;
-}
-.list-content {
-  display: flex;
-  align-items: center;
-  color: #B87900;
-  font-size: 28rpx;
-  font-weight: 500;
-}
-
-/* 倒计时 */
-.countdown {
-  width: 710rpx;
-  height: 154rpx;
-  background-image: url('https://img.ubo.vip/mp/selection/goods-detail/order-check/countdown-bg.png');
-  background-size: 100%;
-  background-repeat: no-repeat;
-}
-.order-status {
-  padding-top: 10rpx;
-  color: #6E4933;
-  font-size: 32rpx;
-}
-.left-time {
-  padding-top: 10rpx;
-  color: #80604D;
-  font-size: 24rpx;
-}
-.order-info {
-  font-size: 28rpx;
-  color: #333;
 }
 
 /* 地址 */
+.address-icon {
+  width: 36rpx; 
+  height: 36rpx;
+}
 .consignee {
   margin-left: 20rpx;
   flex: 1;
@@ -58,59 +27,75 @@
 .person-info {
   display: flex;
   align-items: center;
+  color: #999;
+  font-size: 26rpx;
+}
+.consignee-name {
+  margin-right: 20rpx; 
   color: #333;
-  font-weight: 500;
+  font-size: 30rpx;
+  font-weight: bold;
 }
 .address-info {
-  color: #999;
+  margin-top: 12rpx;
+  color: #333;
+  font-size: 26rpx;
+}
+.select-icon {
+  width: 24rpx;
+  height: 24rpx;
 }
 
 /* 订单列表 */
 .order-header {
   padding-bottom: 20rpx;
-  display: flex;
-  align-items: center;
   font-size: 28rpx;
   font-weight: 500;
-  border-bottom: 1rpx solid #999;
 }
 .shop-icon {
-  margin-right: 20rpx;
-  width: 32rpx;
-  height: 32rpx;
+  margin-right: 16rpx;
+  width: 40rpx;
+  height: 40rpx;
   border-radius: 50%;
 }
 .goods-list {
-  padding: 20rpx 0;
-  border-bottom: 1rpx solid #d8d8d8;
+  margin-bottom: 24rpx;
 }
-.goods-cover {
-  margin-right: 20rpx;
-  width: 160rpx;
-  height: 160rpx;
-  border-radius: 8rpx;
+.goods-list:last-child {
+  margin-bottom: 0;
 }
-.goods-info {
+.goods-img {
+  margin-left: 8rpx;
+  margin-right: 18rpx;
+  width: 184rpx;
+  height: 184rpx;
+  border-radius: 16rpx;
+}
+.goods-content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  flex: 1;
+  justify-content: space-between; 
+  padding-right: 18rpx;
+  flex: 1; 
+  height: 190rpx;
 }
-.goods-price-wrap {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-.shop-price {
-  margin-right: 10rpx; 
-  color: #B87900;
+.goods-name {
+  color: #333;
   font-size: 28rpx;
   font-weight: 500;
 }
-.market-price {
-  font-size: 24rpx; 
+.goods-sku {
+  padding: 12rpx;
+  width: fit-content;
   color: #999;
-  text-decoration: line-through; 
+  font-size: 24rpx;
+  background: #f9f9f9;
+  border-radius: 8rpx;
+}
+.goods-price-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .count-wrap {
   font-size: 24rpx;
@@ -121,43 +106,18 @@
   font-size: 28rpx;
   font-weight: 500;
 }
-.shipping-enable {
-  padding-top: 10rpx;
-  color: #B87900;
-  font-size: 24rpx;
-  display: flex;
-  align-items: center;
-}
-.account-item {
-  padding: 5rpx;
-  font-size: 24rpx;
-  text-align: right;
-  background-color:#ffffff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.account-amount {
-  color:#B87900;
+
+
+.list {
+  margin-top: 24rpx;
   font-size: 28rpx;
-  font-weight: 500;
 }
-.remark-wrapper {
-  padding: 5rpx;
-  font-size: 24rpx;
+.list-title {
+  color: #333;
 }
-.remark {
-  margin: 10rpx 0;
-  padding: 15rpx;
-  width: 100%;
-  height: 100rpx;
-  background-color: #F4F4F4;
-  border-radius: 10rpx;
-  box-sizing: border-box;
-}
-.range-tips {
-  display: flex;
-  align-items: center;
+.list-tips {
+  color: #999;
+  font-size: 26rpx;
 }
 .list-sum {
   padding: 20rpx 0;
@@ -189,95 +149,30 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: env(safe-area-inset-bottom);
+  justify-content: flex-end;
+  padding: 18rpx 24rpx calc(18rpx + env(safe-area-inset-bottom));
   width: 100%;
   background-color: #fff;
 }
 .total-price-wrap {
-  margin-left: 20rpx;
+  margin-right: 32rpx;
+  color: #333;
   font-size: 30rpx;
+  font-weight: 550;
 }
-.total-price {
-  color: #B87900; 
-  font-weight: 500;
+.count-desc {
+  margin-right: 8rpx;
+  color: #999;
+  font-size: 28rpx;
 }
-.submit{
-  margin: 10rpx 20rpx;
+.submit-btn {
   height: 80rpx;
   width: 220rpx;
   color: #fff;
   font-size: 32rpx;
-  font-weight: 500;
-  text-align: center;
-  line-height: 80rpx;
   border-radius: 40rpx;
-  background: #000000;
+  background: #e6e6e6;
 }
-
-.pop-mask {
-  z-index: 20;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.coupon-pop {
-  z-index: 30;
-  position: fixed;
-  left: 0;
-  bottom: -800rpx;
-  padding: 20rpx;
-  width: 100%;
-  height: 800rpx;
-  background-color: #fff;
-  border-radius: 20rpx 20rpx 0 0;
-  transition: .2s cubic-bezier(.49,.01,.33,.99);
-}
-.coupon-pop.show {
-  bottom: 0;
-  transition: .2s cubic-bezier(.49,.01,.33,.99);
-}
-.pop-title {
-  font-size: 32rpx;
-  color: #333;
-  font-weight: 500;
-  text-align: center;
-}
-.coupon-list-wrap {
-  padding: 0 20rpx;
-  overflow: auto;
-  height: 600rpx;
-}
-.coupon-desc-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80rpx;
-}
-.coupon-list-content {
-  font-size: 28rpx;
-  color: #333;
-}
-.list-radio {
-  transform: scale(0.8);
-}
-.finish-btn {
-  position: absolute;
-  left: 50%;
-  bottom: 30rpx;
-  transform: translateX(-50%);
-  height: 80rxp;
-  width: 680rpx;
-  background: #B87900;
-  border-radius: 40rpx;
-  color: #fff;
-  font-size: 32rpx;
-  font-weight: 500;
-  text-align: center;
-  line-height: 80rpx;
+.submit-btn.active {
+  background: #161F4E;
 }
