--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
@@ -40,7 +40,7 @@
   <view class="goods-info-wrap">
     <view class="row between">
       <view class="row baseline">
-        <price-unit price="{{goodsInfo.price || 0}}" fontSize="28rpx" integerPartFontSize="48rpx" />
+        <price-unit price="{{goodsInfo.price || 0}}" fontSize="28rpx" integerFontSize="48rpx" />
         <view class="market-price">￥{{goodsInfo.marketPrice}}</view>
       </view>
       <view class="sale-volume">已售{{goodsInfo.salesVolume}}</view>
