feat: 订单确认页

--- a/pages/mall/subpages/goods/subpages/order-check/components/address-select-popup/index.wxss
+++ b/pages/mall/subpages/goods/subpages/order-check/components/address-select-popup/index.wxss
@@ -1,14 +1,29 @@
-.address-list {
-  padding: 24rpx 24rpx calc(24rpx + env(safe-area-inset-bottom));
+.address-select-popup {
+  padding: 24rpx;
+  background: #f5f6f8;
 }
-.address {
+
+.title {
+  color: #333;
+  font-size: 32rpx;
+  font-weight: 550;
+}
+.add-btn {
+  color: #161F4E;
+  font-size: 28rpx;
+}
+
+.address-list {
+  margin-top: 24rpx;
+  height: 800rpx;
+  overflow-y: scroll;
+}
+.address-item {
   margin-bottom: 24rpx;
+  padding: 24rpx;
   background: #fff;
   border-radius: 24rpx;
   overflow: hidden;
-}
-.inner {
-  padding: 24rpx;
 }
 .address-icon {
   width: 36rpx; 
@@ -40,21 +55,11 @@
   color: #333;
   font-size: 26rpx;
 }
-
-.swipe-cell-delete-btn {
-  width: 65px;
-  height: 100%;
-  color: #fff;
-  font-size: 28rpx;
-  background: #FD0807;
+radio {
+  transform: scale(0.8);
 }
 
-.add-btn {
-  position: fixed;
-  left: 50%;
-  bottom: calc(24rpx + env(safe-area-inset-bottom));
-  transform: translateX(-50%);
-  width: 712rpx;
+.confirm-btn {
   height: 80rpx;
   color: #fff;
   font-size: 28rpx;
