--- a/pages/mine/suppages/address-list/index.wxml
+++ b/pages/mine/suppages/address-list/index.wxml
@@ -6,8 +6,8 @@
       bind:close="deleteAddress" data-id="{{item.id}}" data-index="{{index}}"
       async-close right-width="{{ 65 }}"
     >
-      <view class="inner row" catchtap="editAddress" data-id="{{item.id}}" >
-        <van-icon name="location-o" />
+      <view class="inner row" catchtap="editAddress" data-id="{{item.id}}">
+        <image class="address-icon" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/address-icon.png" />
         <view class="content">
           <view class="row">
             <text class="user-name">{{item.name}}</text>
