feat: 订单确认页

--- a/pages/mall/subpages/goods/subpages/order-check/components/address-select-popup/index.wxml
+++ b/pages/mall/subpages/goods/subpages/order-check/components/address-select-popup/index.wxml
@@ -19,7 +19,7 @@
             </view>
             <view class="address-detail">{{item.regionDesc + ' ' + item.addressDetail}}</view>
           </view>
-          <radio value="{{index}}" checked="{{ selectedIndex === index }}" color="#161F4E" />
+          <radio class="radio" value="{{index}}" checked="{{ selectedIndex === index }}" color="#161F4E" />
         </view>
       </radio-group>
     </scroll-view>
