--- a/pages/mine/suppages/order-list/utils/order.wxs
+++ b/pages/mine/suppages/order-list/utils/order.wxs
@@ -1,9 +1,34 @@
-function status(code, shippingId, needComment) {
-  var commentStatus = needComment ? '待评价' : '已评价'
-  var statusArr = shippingId ? ['未付款', '待收货', '已取消', '售后中', commentStatus, '待发货'] : ['未付款', '待发货', '已取消', '售后中', commentStatus, '待发货'];
-  return statusArr[code - 1];
+function statusDesc(status) {
+  var desc = '';
+  if (status === 101) {
+    desc = '等待买家付款';
+  } else if ([102, 103, 104].includes(status)) {
+    desc = '交易关闭';
+  } else if (status === 201) {
+    desc = '等待卖家发货';
+  } else if (status === 202) {
+    desc = '退款中';
+  } else if (status === 203) {
+    desc = '退款成功';
+  } else if (status === 301) {
+    desc = '待收货';
+  } else if ([401, 402].includes(status)) {
+    desc = '交易成功';
+  }
+  return desc;
+}
+
+function paymentDesc(status) {
+  var desc = '应付款';
+  if (status === 101) {
+    paymentDesc = '需付款';
+  } else if ([201, 301, 401, 402].includes(status)) {
+    desc = '实付款';
+  }
+  return desc;
 }
 
 module.exports = {
-  status: status
+  statusDesc: statusDesc,
+  paymentDesc: paymentDesc,
 }
