--- a/pages/mine/suppages/order-list/components/goods-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/goods-list/index.wxml
@@ -1,4 +1,4 @@
-<view class="goods-list" wx:for="{{data}}" wx:key="index" ontap="showGoodsDetail" data-id="{{item.goods_id}}">
+<view class="goods-list" wx:for="{{data}}" wx:key="index" bindtap="showGoodsDetail" data-id="{{item.goods_id}}">
   <image class="goods-pic" src="{{item.goods_thumb}}" />
   <view class="goods-info">
     <view class="goods-title">{{item.goods_name}}</view>
