--- a/pages/mine/suppages/order-list/components/goods-list/index.wxss
+++ b/pages/mine/suppages/order-list/components/goods-list/index.wxss
@@ -1,78 +1,48 @@
-.goods-list {
-  padding: 20rpx 0;
-  display: flex;
-  height: 216rpx;
-  border-bottom: 1rpx solid #f0f0f0;
+.goods-item {
+  margin-bottom: 24rpx;
 }
-.goods-list:last-child {
-  border-bottom: none;
+.goods-item:last-child {
+  margin-bottom: 0;
 }
-.goods-pic {
-  margin-right: 20rpx;
-  flex: 0 0 176rpx;
-  height: 176rpx;
-  border-radius: 8rpx;
+.goods-img {
+  margin-left: 8rpx;
+  margin-right: 18rpx;
+  width: 184rpx;
+  height: 184rpx;
+  border-radius: 16rpx;
 }
-.goods-info {
-  flex: 1;
+.goods-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between; 
+  padding-right: 18rpx;
+  flex: 1; 
+  height: 190rpx;
 }
-.goods-title {
-  font-size: 24rpx;
-  color:#333;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+.goods-name {
+  color: #333;
+  font-size: 28rpx;
+  font-weight: 500;
 }
-.goods-attr-wrap {
-  flex: 1;
-  display: flex;
-  font-size: 24rpx;
+.goods-sku {
+  padding: 12rpx;
+  width: fit-content;
   color: #999;
-}
-.goods-attr {
-  padding-right: 20rpx;
-  flex: 1;
+  font-size: 24rpx;
+  background: #f9f9f9;
+  border-radius: 8rpx;
 }
 .goods-price-wrap {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
-.shop-price {
-  font-size: 26rpx;
-  color: #333;
-  font-weight: 500;
-}
-.market-price {
-  color: #9a9a9a;
-  font-size: 22rpx;
-  line-height: 1;
-  text-decoration: line-through;
-}
-.status {
-  font-size: 28rpx;
-}
-.status.tip {
-  display: none;
-}
-.status.tip.refunding {
-  display: block;
-  color: red;
-}
-.status.btn {
-  padding: 0 26rpx;
-  height: 56rpx;
-  line-height: 54rpx;
-  text-align: center;
+.count-wrap {
+  font-size: 24rpx;
   color: #666;
-  border-radius: 28rpx;
-  border: 1rpx solid #D8D8D8;
 }
-.status.btn.refunding {
-  color: #B87900;
-  border-color: #B87900;
+.count {
+  margin-left: 5rpx;
+  font-size: 28rpx;
+  font-weight: 500;
 }
