--- a/pages/mine/suppages/order-list/components/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/order-list/index.wxml
@@ -3,12 +3,12 @@
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index">
     <view class="header">
-      <view class="shop-info" wx:if="{{item.shopId}}" catchtap="navToShop" data-id="{{item.shopId}}">
+      <view class="shop-info row" wx:if="{{item.shopId}}" catchtap="navToShop" data-id="{{item.shopId}}">
         <image class="shop-avatar" wx:if="{{item.shopAvatar}}" src="{{item.shopAvatar}}" />
-        <view class="shop-name">{{item.shopName}}</view>
+        <view class="shop-name omit single-line">{{item.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
-      <view class="shop-name" wx:if="{{!item.shopId}}">官方自营</view>
+      <view class="shop-name omit single-line" wx:if="{{!item.shopId}}">官方自营</view>
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="content">
