--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -29,11 +29,10 @@
     <view class="introduce">来一段简短的自我介绍吧～</view>
 
     <view class="function-wrap">
-      
-      <view class="function-item">
+      <navigator class="function-item" url="./suppages/order-list/index" hover-class="none">
         <image class="function-icon" src="./images/order.png" />
         <view class="function-desc">我的订单</view>
-      </view>
+      </navigator>
       <navigator class="function-item" url="./suppages/address-list/index" hover-class="none">
         <image class="function-icon" src="./images/address.png" />
         <view class="function-desc">收货地址</view>
