--- a/pages/mine/suppages/order-list/components/goods-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/goods-list/index.wxml
@@ -1,5 +1,5 @@
 <view class="goods-list">
-  <view class="goods-item" wx:for="{{list}}" wx:key="index" bindtap="navToGoodsDetail" data-id="{{item.goodsId}}">
+  <view class="goods-item row" wx:for="{{list}}" wx:key="index" bindtap="navToGoodsDetail" data-id="{{item.goodsId}}">
     <image class="goods-img" src="{{item.image}}" mode="aspectFill" lazy-load />
     <view class="goods-content">
       <view class="goods-name omit">{{item.name}}</view>
