--- a/pages/mine/suppages/order-list/components/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/order-list/index.wxml
@@ -2,7 +2,7 @@
 
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index">
-    <view class="header row between">
+    <view class="list-header row between">
       <view class="shop-info row" wx:if="{{item.shopId}}" catchtap="navToShop" data-id="{{item.shopId}}">
         <image class="shop-avatar" wx:if="{{item.shopAvatar}}" src="{{item.shopAvatar}}" />
         <view class="shop-name omit single-line">{{item.shopName}}</view>
@@ -11,7 +11,7 @@
       <view class="shop-name omit single-line" wx:if="{{!item.shopId}}">官方自营</view>
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
-    <view class="content">
+    <view class="list-content">
       <goods-list list="{{item.goodsList}}" />
     </view>
     <view class="list-footer">
@@ -22,8 +22,8 @@
       <view class="btn-wrap">
         <button class="btn" wx:if="{{item.status === 301}}" bindtap="navToShipping" data-id="{{item.id}}">查看物流</button>
         <button class="btn" wx:if="{{item.status === 203 || item.status === 401 || item.status === 402}}" bindtap="deleteOrder" data-id="{{item.id}}">删除订单</button>
-        <button class="btn" bindtap="navToDetail" data-id="{{item.id}}">查看详情</button>
         <button class="btn" wx:if="{{item.status === 101}}" bindtap="cancelOrder" data-id="{{item.id}}">取消订单</button>
+        <button class="btn" bindtap="navToDetail" data-id="{{item.id}}">查看详情</button>
         <button class="btn warn" wx:if="{{item.status === 301}}" bindtap="confirmOrder" data-id="{{item.id}}">确认收货</button>
         <button class="btn warn" wx:if="{{item.status === 101}}" bindtap="pay" data-id="{{item.id}}">继续付款</button>
         <button class="btn warn" wx:if="{{item.status === 401 || item.status === 402}}" bindtap="navToComment" data-id="{{item.id}}">去评价</button>
