--- a/pages/mine/suppages/order-list/components/order-list/index.wxss
+++ b/pages/mine/suppages/order-list/components/order-list/index.wxss
@@ -1,13 +1,11 @@
 .order-item {
-  margin-bottom: 20rpx;
-  padding: 20rpx 30rpx;
-  background-color: #fff;
+  margin-bottom: 24rpx;
+  padding: 24rpx;
+  background: #fff;
   border-radius: 16rpx;
 }
 
 .list-header {
-  display: flex;
-  align-items: center;
   font-size: 28rpx;
 }
 .shop-avatar {
@@ -19,16 +17,14 @@
 .shop-name {
   flex: 1;
   color: #333;
-  font-size: 28rpx;
   font-weight: 500;
 }
 .order-status {
   color: #161F4E;
-  font-size: 28rpx;
 }
 
 .list-content {
-  margin: 10rpx 0;
+  margin: 24rpx 0;
 }
 
 .total-info {
@@ -48,7 +44,7 @@
   height: 30rpx;
 }
 .btn-wrap {
-  margin-top: 10rpx;
+  margin-top: 24rpx;
   display: flex;
   justify-content: flex-end;
 }
