--- a/pages/mine/suppages/order-list/utils/order.wxs
+++ b/pages/mine/suppages/order-list/utils/order.wxs
@@ -2,7 +2,7 @@ function statusDesc(status) {
   var desc = '';
   if (status === 101) {
     desc = '等待买家付款';
-  } else if ([102, 103, 104].includes(status)) {
+  } else if (status === 102 || status === 103 || status === 104) {
     desc = '交易关闭';
   } else if (status === 201) {
     desc = '等待卖家发货';
@@ -12,7 +12,7 @@ function statusDesc(status) {
     desc = '退款成功';
   } else if (status === 301) {
     desc = '待收货';
-  } else if ([401, 402].includes(status)) {
+  } else if (status === 401 || status === 402) {
     desc = '交易成功';
   }
   return desc;
@@ -22,7 +22,7 @@ function paymentDesc(status) {
   var desc = '应付款';
   if (status === 101) {
     paymentDesc = '需付款';
-  } else if ([201, 301, 401, 402].includes(status)) {
+  } else if (status === 201 || status === 301 || status === 401 || status === 402) {
     desc = '实付款';
   }
   return desc;
