--- a/pages/mine/suppages/order-list/components/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/order-list/index.wxml
@@ -21,7 +21,7 @@
       </view>
       <view class="btn-wrap">
         <button class="btn" wx:if="{{item.status === 301}}" bindtap="navToShipping" data-id="{{item.id}}">查看物流</button>
-        <button class="btn" wx:if="{{item.status === 203 || item.status === 401 || item.status === 402}}" bindtap="deleteOrder" data-id="{{item.id}}">删除订单</button>
+        <button class="btn" wx:if="{{item.status === 102 || item.status === 103 || item.status === 104 || item.status === 401 || item.status === 402}}" bindtap="deleteOrder" data-id="{{item.id}}">删除订单</button>
         <button class="btn" wx:if="{{item.status === 101}}" bindtap="cancelOrder" data-id="{{item.id}}">取消订单</button>
         <button class="btn" bindtap="navToDetail" data-id="{{item.id}}">查看详情</button>
         <button class="btn warn" wx:if="{{item.status === 301}}" bindtap="confirmOrder" data-id="{{item.id}}">确认收货</button>
