--- a/pages/mine/suppages/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/index.wxml
@@ -7,7 +7,7 @@
 </view>
 
 <view class="content">
-  <order-list status="{{menuList[curMenuIndex].status}}" list="{{orderList}}" />
+  <order-list list="{{orderList}}" bind:update="updateOrderList"/>
   <empty-illus wx:if="{{finished && !orderList.length}}" desc="暂无订单列表" />
   <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～没有更多了～</view>
 </view>
