--- a/pages/mine/suppages/order-list/subpages/order-detail/index.wxss
+++ b/pages/mine/suppages/order-list/subpages/order-detail/index.wxss
@@ -1,4 +1,5 @@
 .content {
+  padding: 24rpx 24rpx ;
   padding-bottom: calc(100rpx + env(safe-area-inset-bottom));
 }
 .order-status-wrap {
@@ -16,8 +17,7 @@
   font-size: 30rpx;
 }
 .info-wrap {
-  margin: 20rpx;
-  padding: 30rpx;
+  padding: 24rpx;
   background-color: #fff;
   border-radius: 20rpx;
 }
@@ -110,18 +110,22 @@
   bottom: 0;
   display: flex;
   justify-content: flex-end;
-  padding: 16rpx 40rpx calc(16rpx + env(safe-area-inset-bottom));
+  padding: 16rpx 24rpx calc(16rpx + env(safe-area-inset-bottom));
   width: 100%;
   background: #fff;
 }
-.bottom-bar-btn {
-  margin-left: 40rpx;
-  padding: 0 30rpx;
-  width: fit-content;
-  height: 66rpx;
-  color: #CD9753;
+.btn {
+  margin-left: 16rpx;
+  width: 160rpx;
+  height: 56rpx;
+  line-height: 54rpx;
+  text-align: center;
   font-size: 28rpx;
-  line-height: 64rpx;
-  border-radius: 33rpx;
-  border: 1rpx solid #CD9753;
+  color: #666;
+  border-radius: 28rpx;
+  border: 1rpx solid #D8D8D8;
+}
+.btn.warn {
+  color: #161F4E;
+  border: 1rpx solid #161F4E;
 }
