--- a/pages/mine/suppages/order-list/subpages/order-detail/index.wxml
+++ b/pages/mine/suppages/order-list/subpages/order-detail/index.wxml
@@ -2,15 +2,25 @@
 <wxs module="ORDER" src="../../utils/order.wxs" />
 
 <view class="content">
-  <view class="info-wrap">
+  <!-- <view class="info-wrap">
     <view class="shipping-info" wx:if="{{orderInfo.order_status_to == 2 && orderInfo.invoice_no}}" bindtap="showShippingDetail">
       <image style="width: 38rpx; height: 38rpx;" src="https://img.ubo.vip/mp/mine/order-detail/shipping-icon.png" />
       <view class="shipping-tips">{{orderInfo.shipping_status}}</view>
       <image style="width: 30rpx; height: 30rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
     </view>
-  </view>
+  </view> -->
   <view class="info-wrap">
-    <goods-list data="{{orderInfo.goods}}" isDetail="{{true}}" orderStatus="{{orderInfo.order_status_to}}" orderId="{{orderInfo.order_id}}"/>
+    <view class="list-header row between">
+      <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
+        <image class="shop-avatar" wx:if="{{orderInfo.shopAvatar}}" src="{{orderInfo.shopAvatar}}" />
+        <view class="shop-name omit single-line">{{orderInfo.shopName}}</view>
+        <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
+      </view>
+      <view class="shop-name omit single-line" wx:if="{{!orderInfo.shopId}}">官方自营</view>
+    </view>
+    <view class="goods-list-wrap">
+      <goods-list list="{{orderInfo.goodsList}}" />
+    </view>
     <view class="price-detail-wrap">
       <view class="price-detail">
         <text>商品合计</text>
@@ -20,22 +30,13 @@
         <text>运费</text>
         <text>+{{orderInfo.shipping_fee_formated}}</text>
       </view>
-      <view class="price-detail">
-        <text>余额</text>
-        <text>-{{orderInfo.surplus_formated}}</text>
-      </view>
-      <view class="price-detail">
-        <text>优惠券折扣</text>
-        <text>-{{orderInfo.bonus}}</text>
-      </view>
       <view class="price-detail total">
         <text class="total-tips">{{orderInfo.order_status_to == 1 || orderInfo.order_status_to == 3 ? '应付金额' : '实付金额'}}</text>
         <text>{{orderInfo.order_status_to == 1 || orderInfo.order_status_to == 3 ? orderInfo.order_amount_formated : orderInfo.money_paid_formated}}</text>
       </view>
     </view>
-  </view>
-  <view class="info-wrap">
-    <view class="order-creation">
+    <view class="more-info">
+      <view class="order-creation">
       <text>订单编号：{{orderInfo.order_sn}}</text>
       <text style="font-size: 28rpx; color: #B87900" bindtap="copyOrderNumber">复制</text>
     </view>
@@ -44,6 +45,7 @@
     </view>
     <view class="order-creation" wx:if="{{orderInfo.pay_time}}">
       <text>支付时间：{{orderInfo.pay_time}}</text>
+    </view>
     </view>
   </view>
 </view>
